[metadata]
license      = Apache License 2.0
license_file = LICENSE
platforms    = any
description  = Open-source Insteon library running on Python 3.
long_description = file: README.rst
keywords     = home, automation, insteon
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Home Automation

[tool:pytest]
testpaths = tests
norecursedirs = .git testing_config

[flake8]
ignore: D401
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
